[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/standard_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/pages/main_menu/main_menu.gd" type="Script" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 375.0
margin_right = 625.0
margin_bottom = 600.0
size_flags_horizontal = 4
custom_constants/separation = 35
alignment = 1

[node name="ResumeGame" parent="MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 165.0
margin_right = 250.0
margin_bottom = 206.0
rect_min_size = Vector2( 250, 41 )

[node name="TextureRect" parent="MarginContainer/VBoxContainer/ResumeGame/Scaler" index="0"]
rect_min_size = Vector2( 250, 41 )

[node name="Label" parent="MarginContainer/VBoxContainer/ResumeGame/Scaler/TextureRect/MarginContainer" index="0"]
margin_right = 250.0
text = "Resume Game"

[node name="Options" parent="MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 241.0
margin_right = 250.0
margin_bottom = 282.0
rect_min_size = Vector2( 250, 41 )

[node name="TextureRect" parent="MarginContainer/VBoxContainer/Options/Scaler" index="0"]
rect_min_size = Vector2( 250, 41 )

[node name="Label" parent="MarginContainer/VBoxContainer/Options/Scaler/TextureRect/MarginContainer" index="0"]
margin_right = 250.0
text = "Options"

[node name="ResetLevel" parent="MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
visible = false
margin_top = 279.0
margin_right = 250.0
margin_bottom = 320.0
rect_min_size = Vector2( 250, 41 )

[node name="TextureRect" parent="MarginContainer/VBoxContainer/ResetLevel/Scaler" index="0"]
rect_min_size = Vector2( 250, 41 )

[node name="Label" parent="MarginContainer/VBoxContainer/ResetLevel/Scaler/TextureRect/MarginContainer" index="0"]
margin_right = 250.0
text = "Reset Level"

[node name="ResetSave" parent="MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 317.0
margin_right = 250.0
margin_bottom = 358.0
rect_min_size = Vector2( 250, 41 )

[node name="TextureRect" parent="MarginContainer/VBoxContainer/ResetSave/Scaler" index="0"]
rect_min_size = Vector2( 250, 41 )

[node name="Label" parent="MarginContainer/VBoxContainer/ResetSave/Scaler/TextureRect/MarginContainer" index="0"]
margin_right = 250.0
text = "Reset Save"

[node name="Cheat" parent="MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 393.0
margin_right = 250.0
margin_bottom = 434.0
rect_min_size = Vector2( 250, 41 )

[node name="TextureRect" parent="MarginContainer/VBoxContainer/Cheat/Scaler" index="0"]
rect_min_size = Vector2( 250, 41 )

[node name="Label" parent="MarginContainer/VBoxContainer/Cheat/Scaler/TextureRect/MarginContainer" index="0"]
margin_right = 250.0
text = "Cheat"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ResumeGame" to="." method="_on_ResumeGame_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ResetLevel" to="." method="_on_ResetLevel_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ResetSave" to="." method="_on_ResetSave_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Cheat" to="." method="_on_Cheat_pressed"]

[editable path="MarginContainer/VBoxContainer/ResumeGame"]
[editable path="MarginContainer/VBoxContainer/Options"]
[editable path="MarginContainer/VBoxContainer/ResetLevel"]
[editable path="MarginContainer/VBoxContainer/ResetSave"]
[editable path="MarginContainer/VBoxContainer/Cheat"]
